Completed 6 lab full